Update README.md
fixed instructions, start up command